<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSecondary"
    tools:context=".AntreanActivity">

    <View
        android:id="@+id/LayerBanner"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:background="@drawable/layer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="260dp"
        android:layout_height="469dp"
        android:layout_margin="65dp"
        android:background="@drawable/bg_antrian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225">

        <ImageView
            android:id="@+id/LogoPuskemas"
            android:layout_width="49dp"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_hospital"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/puskesmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunitoextrabold"
            android:text="@string/puskemas"
            android:textColor="@color/ColorDefault"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/LogoPuskemas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />

        <TextView
            android:id="@+id/TanggalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"

            android:fontFamily="@font/nunito"
            android:text="Tanggal"
            android:textColor="@color/ColorDefault"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/puskesmas"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/NomorAntrian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitobold"
            android:text="Nomor Antrean"
            android:textColor="@color/ColorDefault"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.298" />

        <TextView
            android:id="@+id/Antrian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitoextrabold"
            android:text="01"
            android:textColor="@color/ColorDefault"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NomorAntrian"
            app:layout_constraintVertical_bias="0.101" />

        <TextView
            android:id="@+id/Poliklinik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitobold"
            android:text="Poli"
            android:textColor="@color/ColorDefault"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Antrian"
            app:layout_constraintVertical_bias="0.108" />

        <TextView
            android:id="@+id/Peringatan"
            android:layout_width="199dp"
            android:layout_height="63dp"
            android:layout_margin="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_antrian"
            android:fontFamily="@font/nunito"
            android:text="@string/peringatan"
            android:textAlignment="center"
            android:textColor="@color/ColorDefault"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Poliklinik"
            app:layout_constraintVertical_bias="0.673" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonback"
        android:layout_width="113dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btncircle"
        android:drawableStart="@drawable/btnback"
        android:padding="10px"
        android:text="@string/Back"
        android:textColor="@color/ColorFontPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>